@@ -32,8 +32,9 @@
 
          <!-- Sample invocation of our custom doclet -->
          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.0.1</version>
+            <version>3.4.0</version>
             <executions>
                <execution>
                   <id>sample</id>
@@ -54,12 +55,12 @@
                      <!-- Declare our custom javadoc tags and provide a replacement text for them to be used just in case exclusion fails. -->
                      <tags>
                         <tag>
-                           <name>public</name>
+                           <name>api.public</name>
                            <placement>a</placement>
                            <head>&lt;div class="deprecationBlock"&gt;&lt;b&gt;Public API&lt;/b&gt;&lt;/div&gt;</head>
                         </tag>
                         <tag>
-                           <name>private</name>
+                           <name>api.private</name>
                            <placement>a</placement>
                            <head>&lt;div class="deprecationBlock"&gt;&lt;b&gt;THIS IS NOT PUBLIC API! This is a private implementation detail and must not be referenced by user code.&lt;/b&gt;&lt;/div&gt;</head>
                         </tag>
@@ -71,8 +72,10 @@
                         <!-- DocletMultiplexer needs access to javadoc module internals -->
                         <additionalJOption>-J--add-opens</additionalJOption>
                         <additionalJOption>-Jjdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+                        <additionalJOption>-J--add-opens</additionalJOption>
+                        <additionalJOption>-Jjava.base/java.util=ALL-UNNAMED</additionalJOption>
                         <!-- Uncomment to enable remote debugging -->
-                        <!-- <additionalJOption>-J-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8787</additionalJOption> -->
+                        <additionalJOption>-J-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8787</additionalJOption>
                      </additionalJOptions>
                   </configuration>
                </execution>
